# sport-intelligence-platform

./: .gitignore  README.md  pyproject.toml
data/knowledge/biomechanics/: running_dynamics_and_physiological_metrics.md
data/knowledge/toyota/: toyota_kata.md  toyota_way.md  toyota_way_extended.md
data/raw/: warsaw_half_marathon_2026.csv
docs/: ai_context.md  api_design.md  api_progress.md  architecture.md  complete_running_api.md  future_running_api.md  product_layers.md  product_manifesto.md  questions.md  workflow.md
scripts/: test_load.py
src/sip/domains/running/: analysis.py  cleaning.py  constants.py  mappers.py  models.py
